change files according to mentor's notes